force-app/main/default/objects/Fee_Structure__c/Fee_Structure__c.object-meta.xml
<CustomObject>
    <label>Fee Structure</label>
    <nameField>
        <label>Fee Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>