force-app/main/default/objects/Fee_Structure__c/fields/Admission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admission_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Admission Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>