force-app/main/default/objects/Fee_Structure__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.A.</fullName>
            </value>
            <value>
                <fullName>B.Com</fullName>
            </value>
            <value>
                <fullName>B.Sc.</fullName>
            </value>
            <value>
                <fullName>B.Ed.</fullName>
            </value>
            <value>
                <fullName>M.B.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>