force-app/main/default/objects/Fee_Structure__c/fields/CourseCode__c.field-meta.xml
<CustomField>
    <fullName>CourseCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course Code</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Fee Structures</relationshipLabel>
    <relationshipName>Fee_Structures</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>