force-app/main/default/objects/Fee_Structure__c/fields/G_O_Revised__c.field-meta.xml
<CustomField>
    <fullName>G_O_Revised__c</fullName>
    <label>G.O/Revised</label>
    <length>255</length>
    <type>Text</type>
</CustomField>