force-app/main/default/objects/Fee_Structure__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <formula>IF( RecordType.Name=&apos;Management&apos;,  Management_Fee__c ,  Admission_Fee__c+ Special_Fee__c+ Tution_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>