force-app/main/default/objects/Fee_Structure__c/recordTypes/Convenor_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Convenor_Record_Type</fullName>
    <active>true</active>
    <description>This record type is used for Non-management students</description>
    <label>Convenor</label>
</RecordType>