force-app/main/default/objects/Fee_Structure__c/recordTypes/Management_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Management_Record_Type</fullName>
    <active>true</active>
    <description>This record type is used for management students</description>
    <label>Management</label>
</RecordType>