force-app/main/default/objects/Fee_Structure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CourseCode__c</columns>
    <columns>Admission_Fee__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Special_Fee__c</columns>
    <columns>Management_Fee__c</columns>
    <columns>Tution_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>